fix styles broken in footer and propose

--- a/src/components/section-footer/section-footer.module.scss
+++ b/src/components/section-footer/section-footer.module.scss
@@ -1,28 +1,20 @@
 .container {
     background-color: var(--blue);
-}
-
-.content {
-    flex-wrap: nowrap;
-    flex-direction: row;
-    p {
-        max-width: width 500px;
+    .content {
+        p {
+            max-width: 500px;
+        }
+        h3 {
+            font-size: 2em;
+        }
+        ul {
+            text-shadow: 0 0 3px #fff, 0 0 7px #fff;
+            list-style: none;
+        }
+        .window {
+            width: 95%;
+        }
     }
-    h3 {
-        font-size: 2em;
-    }
-    ul {
-        text-shadow: 0 0 3px #fff, 0 0 7px #fff;
-        list-style: none;
-    }
-}
-
-.window {
-    width: 95%;
-}
-
-.contact {
-    display: none;
 }
 
 @media (min-width: 1000px) {
